[package]
name = "storage-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"] }
tower-http = { version = "0.3.5", features = ["trace", "cors", "fs"] }
axum = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.68"
hyper = "0.14.23"

serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.150"
serde_json = "1.0.91"
mint-client = { path = "../client/client-lib" }
fedimint-storage = { path = "../modules/fedimint-storage" }
fedimint-api = { path = "../fedimint-api" }

threshold_crypto = { git = "https://github.com/jkitman/threshold_crypto", branch = "upgrade-threshold-crypto-libs" }
secp256k1-zkp = { version = "0.7.0", features = ["serde", "bitcoin_hashes"] }
url = { version = "2.3.1", features = ["serde"] }
