[package]
name = "fedimint-storage"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-storage"
license = "MIT"

[lib]
name = "fedimint_storage"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
futures = "0.3"
fedimint-api = { path = "../../fedimint-api" }
rand = "0.8"
rayon = "1.6.1"
serde = { version = "1.0.149", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
impl-tools = "0.6.1"
thiserror = "1.0.37"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
tracing = "0.1.37"

[dev-dependencies]
serde_json = "1.0.89"
fedimint-rocksdb = { path = "../../fedimint-rocksdb" }
tempfile = "3.3.0"
test-log = { version = "0.2", features = ["trace"], default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio = { version = "1.23.1", features = ["rt", "rt-multi-thread", "sync", "time"] }
